# tpm-data

./: .env.example  Dockerfile  LICENSE  README.md  SCAFFOLD.md  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  test_format_detector.py
tpm_data/: __init__.py
tpm_data/compute/: __init__.py  baseline_engine.py  fatigue_indexer.py  lift_scorer.py  roi_scorer.py
tpm_data/ingestion/: __init__.py  canonical_writer.py  format_detector.py  product_resolver.py  validator.py
tpm_data/reports/: __init__.py  batch_job.py  narrative_generator.py  pdf_renderer.py
